--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <ul>
        <li><a href=”/”>Home</a></li>
        <li><a href=”/about”>About</a></li>
-       <li><a href=”/resume”>Curriculum Vitae</a></li>
+       <li><a href=”/cv”>Curriculum Vitae</a></li>
        <li><a href=”/blog”>Blog</a></li>
      </ul>
    </nav>
