--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    </nav>
    <div class=”container”>
      <div class=”blurb”>
-       <h1>Hi, I am YOUR NAME!</h1>
+       <h1>Hi, I am Yicheng Yang!</h1>
        <p>This is my first page for my personal website!</a></p>
      </div>
    </div>
